--- a/personRecord/View/CustomView/TableCell/TagTableViewCell.xib
+++ b/personRecord/View/CustomView/TableCell/TagTableViewCell.xib
@@ -9,45 +9,42 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="109" id="KGk-i7-Jjw" customClass="TagTableViewCell" customModule="personRecord" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="360" height="109"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="51" id="KGk-i7-Jjw" customClass="TagTableViewCell" customModule="personRecord" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="360" height="51"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="360" height="109"/>
+                <rect key="frame" x="0.0" y="0.0" width="360" height="51"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vYT-S2-oAL" userLabel="LabelButton">
-                        <rect key="frame" x="0.0" y="10" width="360" height="113"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cellicon" translatesAutoresizingMaskIntoConstraints="NO" id="wWV-QC-Fgu">
+                        <rect key="frame" x="20" y="10.5" width="30" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="vYT-S2-oAL" secondAttribute="height" multiplier="302:95" id="mGj-3w-HUB"/>
+                            <constraint firstAttribute="height" constant="30" id="9s0-v7-4cH"/>
+                            <constraint firstAttribute="width" constant="30" id="n0O-V6-wZV"/>
                         </constraints>
-                        <state key="normal" backgroundImage="UI07">
-                            <attributedString key="attributedTitle">
-                                <fragment content="Label">
-                                    <attributes>
-                                        <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <font key="NSFont" metaFont="system" size="15"/>
-                                        <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                    </attributes>
-                                </fragment>
-                            </attributedString>
-                        </state>
-                    </button>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFX-t6-dPD">
+                        <rect key="frame" x="70" y="15" width="41.5" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="vYT-S2-oAL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Ozo-gc-keE"/>
-                    <constraint firstAttribute="trailing" secondItem="vYT-S2-oAL" secondAttribute="trailing" id="eXr-6P-bBF"/>
-                    <constraint firstItem="vYT-S2-oAL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="yi8-mW-IfN"/>
+                    <constraint firstItem="wWV-QC-Fgu" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="IKl-Lo-L4i"/>
+                    <constraint firstItem="dFX-t6-dPD" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="LIu-5U-BxR"/>
+                    <constraint firstItem="dFX-t6-dPD" firstAttribute="leading" secondItem="wWV-QC-Fgu" secondAttribute="trailing" constant="20" id="PQ3-9D-Hy2"/>
+                    <constraint firstItem="wWV-QC-Fgu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Pxx-EC-6mL"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="labelButton" destination="vYT-S2-oAL" id="axf-kW-GTI"/>
+                <outlet property="categoryLabel" destination="dFX-t6-dPD" id="726-UE-eOs"/>
             </connections>
-            <point key="canvasLocation" x="166.66666666666669" y="34.486607142857139"/>
+            <point key="canvasLocation" x="166.66666666666669" y="13.727678571428571"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="UI07" width="194.5" height="61.5"/>
+        <image name="cellicon" width="61.5" height="61.5"/>
     </resources>
 </document>
